# wheel_lidar_calibration_ceres

./: CMakeLists.txt  README.md  package.xml
config/: calibration_params.yaml
include/wheel_lidar_calibration/: calibration_optimizer.hpp  calibration_optimizer_ceres.hpp  calibration_validator.hpp  data_synchronizer.hpp  observability_analyzer.hpp
launch/: calibration.launch.py
src/: calibration_node.cpp  calibration_optimizer.cpp  calibration_optimizer_ceres.cpp  calibration_validator.cpp  data_synchronizer.cpp  observability_analyzer.cpp
